# IDEADetectorSIM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  env.sh  install_standalone.sh  key4hep_setup.sh
DCHDAQ/: Makefile  Makefile.am  Makefile.in  PlotData.txt  README  ReleaseNotes  config.status  configure  configure.ac
DCHDAQ/Setup/: WaveDumpConfig.txt  WaveDumpConfig_X740.txt  WaveDumpConfig_X742.txt
DCHDAQ/include/: CAENVMEBridge.h  DCHDAQ.h  WDconfig.h  WDtype.h  WaveDump.h-off  v1190.h
DCHDAQ/src/: DCHDAQ.c  Makefile  Makefile.am  Makefile.in  Release.c  WDconfig.c  X742CorrectionRoutines.c  v1190.c
DRCalo/Analysis/AnalysisTools/: CMakeLists.txt
DRCalo/Analysis/AnalysisTools/include/: AnalysisHistoBase.h  Cut.h
DRCalo/Analysis/AnalysisTools/src/: AnalysisHistoBase.cxx  Cut.cxx
DRCalo/Digitization/DRDigitization/: CMakeLists.txt
DRCalo/Digitization/DRDigitization/include/: DigitSteer.h  DigitSteerLinkDef.h  FiberDigitizer.h  FiberDigitizerLinkDef.h
DRCalo/Digitization/DRDigitization/python/: run_digitization.py  test_digitization.py
DRCalo/Digitization/DRDigitization/src/: DigitSteer.cxx  FiberDigitizer.cxx
DRCalo/Digitization/DRDigitization/utils/: RunDRDigitization.cxx
DRCalo/Digitization/DdAndCalibration/: CMakeLists.txt
DRCalo/Digitization/DdAndCalibration/include/: DRCalo_FiberType.h  DR_CaloGridHelper.h  DR_GeometryHelper.h
DRCalo/Digitization/DdAndCalibration/src/: DR_CaloGridHelper.cxx  DR_GeometryHelper.cxx
DRCalo/Digitization/DdAndCalibration/utils/: TestCalibration.cxx  TestGridHelper.cxx
ParticleFlow_k4pandora/k4Pandora/Pandora/k4GaudiPandora/: CMakeLists.txt
ParticleFlow_k4pandora/k4Pandora/Service/GearSvc/: CMakeLists.txt
converter/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  ConvertHits.sh  Makefile  buildRecoLevelIDEAFile.cc  cmake_install.cmake  convertHits  convertHits.cc  convertTracks  convertTracks.cc  readHits  readHits.cc
simulation/g4GMC/: .gitignore  CMakeLists.txt  ConvertHits.sh  GNUmakefile  GenerateSeeds.C  LaunchSims.sh  README  Script.sh  SeedsGenerated_100.lst  SeedsGenerated_200.lst  configGeomFile.txt  convertHits.cc  g4GMC.cc  log  readHits.cc
simulation/g4GMC/CDCH/: CMakeLists.txt
simulation/g4GMC/CDCH/include/: CDCHGasLayerSD.hh  CDCHGasLayerSD_Hexagonal.hh  CDCHGasLayerSD_Square.hh  CDCHMaker.hh  CDCHWiredata.hh  CDCHWireposition.hh  CDCHtracker.hh  CDCHtrackerBuilder.hh  Cell.hh  CellDetail.hh  CellGeometryHandle.hh  CellGeometryHandle_ExtGeom.hh  CellGeometryHandle_v2.hh  CellGeometryHandle_v2_DBL.hh  CellGeometryHandle_v3.hh  CellGeometryHandle_v3_DBL.hh  CellGeometryHandle_v4.hh  CellId.hh  Layer.hh  LayerDetail.hh  LayerId.hh  SuperLayer.hh  SuperLayerId.hh  SuperLayerInfo.hh  TrackerWireSD.hh  Wall.hh  Wire.hh  WireDetail.hh  WireId.hh
simulation/g4GMC/CDCH/src/: CDCHGasLayerSD.cc  CDCHGasLayerSD_Hexagonal.cc  CDCHGasLayerSD_Square.cc  CDCHMaker.cc  CDCHWiredata.cc  CDCHWireposition.cc  CDCHtracker.cc  CDCHtrackerBuilder.cc  Cell.cc  CellDetail.cc  CellGeometryHandle.cc  CellGeometryHandle_ExtGeom.cc  CellGeometryHandle_v2.cc  CellGeometryHandle_v2_DBL.cc  CellGeometryHandle_v3.cc  CellGeometryHandle_v3_DBL.cc  CellGeometryHandle_v4.cc  CellId.cc  Layer.cc  LayerDetail.cc  LayerId.cc  SuperLayer.cc  SuperLayerId.cc  TrackerWireSD.cc  Wall.cc  Wire.cc  WireDetail.cc  WireId.cc
simulation/g4GMC/DRFPIC/: CMakeLists.txt
simulation/g4GMC/DRFPIC/include/: DRCaloIO.hh  DRFPICBuilder.hh  DRFPICMaker.hh  DRFPICaloSD.hh  DRFPICscntSD.hh  DRFPIcalorimeter.hh  Fiber.hh  FiberDetail.hh  FiberId.hh  GMCG4PodioManager.hh  (+5 more)
simulation/g4GMC/EXCEP/: CMakeLists.txt  GNUmakefile
simulation/g4GMC/GEOMSRVC/: CMakeLists.txt
simulation/g4GMC/MUSPC/: CMakeLists.txt
simulation/g4GMC/PHCV/: CMakeLists.txt  GNUmakefile
simulation/g4GMC/PSHW/: CMakeLists.txt
simulation/g4GMC/SVX/: CMakeLists.txt
simulation/g4GMC/TDCH/: CMakeLists.txt
simulation/g4GMC/config/: CDCH.txt  LEproto.txt  ModPxVertex.txt  RMproto.txt  SimpleTarget_v00.txt  bmpipe_v00-IDEA_CEPC.txt  cdch_v42-mu2e.txt  cdch_v50-IDEA_CEPC.txt  cdch_v50-meg.txt  cdch_v50-mu2e.txt  cdch_v60-CIRCE-2.txt  cdch_v60-CIRCE-3.txt  cdch_v60-CIRCE.txt  drfpic_v00-IDEA_CEPC.txt  geom_01.txt  geom_02-1.txt  geom_02.txt  geom_03.txt  geom_04.txt  geom_CIRCE-1.txt  geom_CIRCE-2.txt  geom_CIRCE-3.txt  geom_CIRCE-4.txt  geom_CIRCE-5.txt  geom_CIRCE-6.txt  geom_CIRCE-7.txt  geom_CIRCE-8.txt  geom_CIRCE.txt  geom_IDEA-test.txt  geom_IDEA.txt  geom_MEGtest-01.txt  geom_mu2e2-strk.txt  geom_nextMEG-test-vtx-1.txt  geom_nextMEG-test-vtx-2.txt  geom_nextMEG-test-vtx.txt  geom_nextMEG-test.txt  phcv_v00-CIRCE-1.txt  phcv_v00-CIRCE-2.txt  phcv_v00-CIRCE-3.txt  phcv_v00-CIRCE-4.txt  (+10 more)
simulation/g4GMC/g4mac/: myrun.mac  run1.mac  runCIRCE-PGun-thet-60.mac  runCIRCE-gamGun-1.mac  runCIRCE-gamGun.mac  runMeg-PGun-thet-48.mac  runMeg-PGun-thet-60.mac  runMu2e-PGun-thet-13.mac  runMu2e-PGun-thet-167.mac  runMu2e-PGun-thet-fw.mac  runPFix-1-Pi.mac  runPFix-1-k.mac  runPFix-1.mac  runPGun.mac  runTest.mac
simulation/g4GMC/include/: GMCG4ActionInitialization.hh  GMCG4BeamPipeBuilder.hh  GMCG4DetectorConstruction.hh  GMCG4DetectorMessenger.hh  GMCG4EventAction.hh  GMCG4FieldMessenger.hh  GMCG4FieldSetup.hh  GMCG4GPSPrimaryGeneratorAction.hh  GMCG4LecceProtoBuilder.hh  GMCG4MagneticField.hh  GMCG4MegTAR.hh  GMCG4ModupixTrkrBuilder.hh  GMCG4PrimaryGeneratorAction.hh  GMCG4PrimaryGeneratorMessenger.hh  GMCG4RomaProtoBuilder.hh  GMCG4RunAction.hh  GMCG4StopTargetBuilder.hh  GMCG4TrackingAction.hh  PhysicsList.hh
simulation/g4GMC/src/: GMCG4ActionInitialization.cc  GMCG4BeamPipeBuilder.cc  GMCG4DetectorConstruction.cc  GMCG4DetectorMessenger.cc  GMCG4EventAction.cc  GMCG4FieldMessenger.cc  GMCG4FieldSetup.cc  GMCG4GPSPrimaryGeneratorAction.cc  GMCG4LecceProtoBuilder.cc  GMCG4MagneticField.cc  GMCG4MegTAR.cc  GMCG4ModupixTrkrBuilder.cc  GMCG4PrimaryGeneratorAction.cc  GMCG4PrimaryGeneratorMessenger.cc  GMCG4RomaProtoBuilder.cc  GMCG4RunAction.cc  GMCG4StopTargetBuilder.cc  GMCG4TrackingAction.cc  OpticalPhysics.cc  PhysicsList.cc
simulation/g4GMC/xml/: selection.xml
(+363 files in other folders)
